src/App.css
@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@500&family=Roboto&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 62.5%; /* Ré-équilibrage du Rem face au Pixel pour des calculs simples */
}

html {
  overflow-y: scroll;
}

body {
  /* Variables */
  --font-roboto: "Roboto", sans-serif;
  --font-arimo: "Arimo", sans-serif;
  --color-white: #E8E8E8;
  --color-bg: #15141F;

  background-color: var(--color-bg);
  width: 100%;
  padding: 0 50px;
}


::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: none;
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background: var(--color-white);
  border-radius: 5px;
}

.app {
  width: 100%;
}

/* 
-----------------------------
Nav
-----------------------------
*/

nav {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  width: 100%;
  padding: 15px 0;
  z-index: 10;
}

nav::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 200%;
  top: -50%;
  left: 0;
  background-color: var(--color-bg);
  filter: blur(10px);
  z-index: 9;
}

nav ul {
  display: flex;
  z-index: 10;
}

nav li {
  list-style: none;
  margin: 0 25px;
}

nav a {
  font-family: var(--font-arimo);
  font-size: 2rem;
  color: var(--color-white);
  text-decoration: none;
}

/* 
-----------------------------
Home
-----------------------------
*/

main {
  position: relative;
  display: flex;
  flex-direction: column-reverse;
  margin-top: 75px;
}

.home-title {
  text-align: center;
  font-family: var(--font-roboto);
  font-size: 7rem;
  color: var(--color-white);
  opacity: 0;
}

.home-subTitle {
  position: fixed;
  top: 0;
  left: 50%;
  transform: translate(-50%, 100%);
  font-family: var(--font-arimo);
  font-size: 20rem;
  color: var(--color-white);
}

section {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
}

/* 
-----------------------------
Article
-----------------------------
*/

.article-text {
  text-align: justify;
  margin: 25px 0 25px 50%;
  font-size: 2rem;
  font-family: var(--font-arimo);
  color: var(--color-white);
  transform: translateY(25px);
  opacity: 0;
} 

.article-aside {
  position: absolute;
  top: 40%;
  left: 100px;
  width: 300px;
  padding: 25px 15px;
  background-color: rgb(15, 15, 15);
  border-radius: 10px;
  opacity: 0;
  transform: translateY(25px);
}

.article-aside h2 {
  text-align: center;
  font-size: 5rem;
  font-family: var(--font-roboto);
  color: var(--color-white);
  margin-bottom: 25px;
}

.article-aside p {
  font-size: 2.5rem;
  font-family: var(--font-roboto);
  color: var(--color-white);
}


/* 
-----------------------------
Card
-----------------------------
*/

.card-single {
  position: absolute;
}

.card {
  height: 70vh;
  width: 35vw;
  padding-left: 25px;
  overflow: hidden;
  cursor: pointer;
}

.card-home {
  position: relative;
  margin: 50px 0;
  opacity: 0;
}

.card-title {
  position: absolute;
  top: 50%;
  left: 0;
  color: var(--color-white);
  font-size: 5rem;
  font-family: var(--font-roboto);
  transform: translate(0, -50%);
  z-index: 2;
}

.card img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.card-down {
  transform: translateY(150px);
}

.card-back {
  position: fixed;
  margin: 15px;
  display: flex;
  align-items: center;
  text-decoration: none;
  opacity: 0;
  z-index: 8;
}

.card-back img {
  width: 35px;
  height: 35px;
}

.card-back span {
  font-size: 2.5rem;
  font-family: var(--font-roboto);
  color: var(--color-white);
  margin-left: 15px;
}

@media screen and (max-width: 1000px) {
  .article-text {
    margin: 25px 0 25px 350px;
  } 

  .article-aside {
    left: 25px;
  }
}

@media screen and (max-width: 768px) {
  .home-title {
    font-size: 4rem;
  }

  .card {
    height: 50vh;
    padding: 0;
  }

  .card-title {
    width: 100%;
    text-align: center;
    font-size: 3rem;
  }

  .article-text {
    text-align: start;
    margin: -50px 25px 25px 25px;
  } 

  .article-aside {
    position: relative;
    width: calc(100% - 50px);
    top: 35%;
    left: 25px;
    transform: translateY(10px);
  }
}

@media screen and (max-width: 550px) {
  section {
    justify-content: center;
    flex-direction: column;
    align-items: center;
    flex-wrap: nowrap;
  }

  .card {
    width: 80vw;
  }
}

@media screen and (max-width: 425px) {
  nav {
    justify-content: center;
  }

  .home-title {
    font-size: 3rem;
  }
}

